<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_medium"
    >


    <!--Email Header-->
    <TextView
        android:id="@+id/emailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_header"
        android:textColor="@color/text_light"
        android:textSize="@dimen/text_small" />
        <!--android:layout_below="@id/profileImage"-->

    <!--Email-->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailHeader"
        android:layout_marginTop="@dimen/margin_negative_medium"
        android:text="not found"
        android:textColor="@color/text"
        android:textSize="@dimen/text_medium" />

    <!--Columns-->
    <LinearLayout
        android:id="@+id/columns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <!--Column Alpha-->
        <RelativeLayout
            android:id="@+id/columnAlpha"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight="1">


            <!--Country Header-->
            <TextView
                android:id="@+id/countryHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_header"
                android:textColor="@color/text_light"
                android:textSize="@dimen/text_small" />

            <!--Country-->
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/countryHeader"
                android:layout_below="@+id/countryHeader"
                android:layout_marginTop="@dimen/margin_negative_medium"
                android:text="not found"
                android:textColor="@color/text"
                android:textSize="@dimen/text_medium" />

            <!--Id Header-->
            <TextView
                android:layout_below="@id/country"
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/idHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_header"
                android:textColor="@color/text_lighter"
                android:textSize="@dimen/text_small" />

            <!--Id-->
            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/countryHeader"
                android:layout_below="@+id/idHeader"
                android:layout_marginTop="@dimen/margin_negative_medium"
                android:text="not found"
                android:textColor="@color/text_lighter"
                android:textSize="@dimen/text_medium" />

            <!--Logout -->
            <RelativeLayout
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:paddingTop="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                >

                <ImageView
                    android:id="@+id/logoutIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logout"
                    android:tint="@color/light_red"
                    android:layout_marginRight="@dimen/margin_negative_small"
                    android:layout_marginLeft="@dimen/margin_negative_small"

                    />

                <TextView
                    android:layout_toRightOf="@id/logoutIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small"
                    android:text="LOGOUT"
                    android:textColor="@color/light_red"
                    />

            </RelativeLayout>


        </RelativeLayout>

        <!--Column Beta-->
        <RelativeLayout
            android:id="@+id/columnBeta"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight="1">

            <!--Achievement points Header-->
            <TextView
                android:id="@+id/achievementPointsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievement_points_header"
                android:textColor="@color/text_lighter"
                android:textSize="@dimen/text_small" />


            <!--Achievement points-->
            <TextView
                android:id="@+id/achievementPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/achievementPointsHeader"
                android:layout_below="@id/achievementPointsHeader"
                android:layout_marginTop="@dimen/margin_negative_medium"
                android:text="not found"
                android:textColor="@color/text_lighter"
                android:textSize="@dimen/text_medium" />


            <!--Created Header-->
            <TextView
                android:layout_below="@id/achievementPoints"
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/createdHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_header"
                android:textColor="@color/text_lighter"

                android:textSize="@dimen/text_small" />


            <!--Created-->
            <TextView
                android:id="@+id/created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/achievementPointsHeader"
                android:layout_below="@id/createdHeader"
                android:layout_marginTop="@dimen/margin_negative_medium"
                android:text="not found"
                android:textColor="@color/text_lighter"
                android:textSize="@dimen/text_medium" />


        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>